--- a/Milestone_1.ipynb
+++ b/Milestone_1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPt32ijmVplxObK43y++IWM",
+      "authorship_tag": "ABX9TyPagB/1C2jDrNh7yHJrvxE/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -25,6 +25,15 @@
       "source": [
         "<a href=\"https://colab.research.google.com/github/av-sivasai/AI-Powered-Fraud-Management-System-for-UID-Aadhaar/blob/main/Milestone_1.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Create Folder Structure**"
+      ],
+      "metadata": {
+        "id": "-xp_uqZzBSNo"
+      }
     },
     {
       "cell_type": "code",
@@ -51,6 +60,15 @@
         "os.makedirs(\"dataset/raw_10000\", exist_ok=True)\n",
         "print(\"Folders created!\")"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Install Required Libraries**"
+      ],
+      "metadata": {
+        "id": "G9rqyM6CBZkO"
+      }
     },
     {
       "cell_type": "code",
@@ -82,6 +100,15 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Install Fonts**"
+      ],
+      "metadata": {
+        "id": "U3rLXCclBd-f"
+      }
     },
     {
       "cell_type": "code",
@@ -134,6 +161,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "**Import Libraries + Helper Function**"
+      ],
+      "metadata": {
+        "id": "aEpY0X9CBg42"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "import cv2\n",
@@ -158,6 +194,15 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Synthetic Aadhaar-Like Generator Function**"
+      ],
+      "metadata": {
+        "id": "S1BM4ipLBjdS"
+      }
     },
     {
       "cell_type": "code",
@@ -207,6 +252,15 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Generate 10,000 Cards in Batches**"
+      ],
+      "metadata": {
+        "id": "XzYAttMhBl6U"
+      }
     },
     {
       "cell_type": "code",
@@ -260,6 +314,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "**Verify Count**"
+      ],
+      "metadata": {
+        "id": "6bNUiZPiBoIS"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "len(os.listdir(\"dataset/raw_10000\"))"
@@ -286,6 +349,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "**Create Preprocessed Folder**"
+      ],
+      "metadata": {
+        "id": "u7hO-I10BpYT"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "import os\n",
@@ -310,6 +382,15 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**FULL PREPROCESSING PIPELINE**"
+      ],
+      "metadata": {
+        "id": "6YhP2DSYBp7Z"
+      }
     },
     {
       "cell_type": "code",
@@ -468,6 +549,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "**Verify Preprocessed Count**"
+      ],
+      "metadata": {
+        "id": "0F2riHGqBqVh"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "len(os.listdir(\"dataset/preprocessed_10000\"))"
@@ -492,6 +582,15 @@
           "execution_count": 10
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Create Train/Test Folders**"
+      ],
+      "metadata": {
+        "id": "a51Gr6bwBrMP"
+      }
     },
     {
       "cell_type": "code",
@@ -520,6 +619,15 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Perform Train/Test Split (80/20)**"
+      ],
+      "metadata": {
+        "id": "dHIA6zw0Bqwm"
+      }
     },
     {
       "cell_type": "code",
@@ -573,6 +681,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "**Verify Train/Test Count**"
+      ],
+      "metadata": {
+        "id": "xfZfbfDrBrm8"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "print(\"Train images:\", len(os.listdir(\"dataset/train_10000\")))\n",
@@ -596,6 +713,15 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Show a Grid of Images (3×3 Preview)**"
+      ],
+      "metadata": {
+        "id": "CUqtDQa8CCVU"
+      }
     },
     {
       "cell_type": "code",
